# USAS-Evaluation-Framework

./: .gitignore  AGENTS.md  README.md  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/usas_evaluation_framework/: __init__.py  data_utils.py  dataset.py
src/usas_evaluation_framework/metrics/: top_n_accuracy.py
src/usas_evaluation_framework/parsers/: base.py  benedict.py  corcencc.py  icc_irish.py  torch.py
tests/: test_data_utils.py  test_dataset.py  test_version.py  utils_test.py
tests/data/parsers/benedict/english/: benedict_english_corpus.txt  benedict_english_one_token.txt  benedict_english_small_example.txt  benedict_english_small_with_empty_line.txt  benedict_english_text_as_label.txt  benedict_english_wrong_format.txt
tests/data/parsers/benedict/finnish/: benedict_finnish_corpus.txt  (+4 more)
tests/data/parsers/corcencc/: corcencc_corpus.txt  corcencc_empty_token.txt  corcencc_one_token.txt  corcencc_small_example.txt  corcencc_text_as_label.txt  corcencc_usas_label_is_valid.txt  corcencc_wrong_format.txt
tests/data/parsers/icc_irish/: icc_duplicate_mwe_index.tsv  icc_duplicate_mwe_index_2.tsv  icc_empty_token.tsv  icc_incorrect_mwe_format.tsv  icc_negative_mwe.tsv  icc_non_ascending_mwe.tsv  icc_non_z9_punct.tsv  icc_one_token.tsv  icc_small_example.tsv  icc_text_as_label.tsv  icc_usas_label_is_valid.tsv  icc_wrong_format.tsv
tests/data/parsers/torch/: torch_corpus.csv  torch_empty_token.csv  torch_one_token.csv  torch_predicted_punct_tag.csv  torch_small_example.csv  torch_text_as_label.csv  torch_usas_label_is_valid.csv  torch_wrong_format.csv
tests/metrics/: test_top_n_accuracy.py
tests/parsers/: test_benedict.py  test_corcencc.py  test_crocencc.py  test_icc_irish.py  test_torch.py
